test/driver/unknown_option.dmz
// RUN: (dmz -unknown || true) 2>&1 | filecheck %s
// CHECK: error: unexpected option '-unknown'
